# PlayingAround

./: .gitignore  README.md
CIS202/: StarterCode.java
CIS202/Assignments/: ArraysLab.java  CastleDrawing.java  ConditionalLogicLab.java  GraphicsLab.java  LabOrientation.java  LoopLab.java
CIS202/inClassNotes/: ArrayLearning.java  CIS202IsFun.java  Convocation.java  EvenMoreFun.java  FunWithStrings.java  LittlePrince.java  SimpleLoops.java  Temples.java  temples.txt
CIS202/onMyOwn/: HelloWorldApp.java  InputOptionTesting.java  ScannerConstructorDemo2.java  SheepFun.java  WindowFun.java  buggy.py
CIS205/: About.md
CIS205/labs/: lab00.01.py  lab00.02.py  lab01.01.py  lab03.01.py  lab04.01.py  lab04.04.py  lab04.06.py  lab05.03.py  lab06.02.py
CIS205/testing/: fibiLoop.py  logicalConnectives.py  recurse.py
CSharp/HelloWorld/: HelloWorld.sln
Golang/GoLang_CompleteDevsGuide/: GoLang.md
Java/: README.MD
Java/VendSim/: settings.gradle
JavaScript/: README.md
JavaScript/BinarySearchTree/: index.html
JavaScript/DinoRunnerClone/: app.js  index.html
JavaScript/DoodleJump/: index.html  ref.css
JavaScript/FlappyBirdClone/: app.js  index.html  style.css
JavaScript/MDNBreakout/: INFO.md
JavaScript/MERNGStack/: INFO.md  config.js  (+3 more)
Python/: README.md
Python/Django/django-poles/: MANIFEST.in  README.rst  setup.cfg
Python/Django/django-poles/poles/: admin.py  tests.py  views.py
Python/Django/django-poles/poles/templates/poles/: index.html
Ruby/: README.md  arrays.rb  debugging.rb  enumerable.rb  hashes.rb  loops.rb  methods.rb  problem_solving.rb
(+673 files in other folders)
