[metadata]
name = django-poles
version = 0.1
description = A Django app to conduct Web-based polls.
long_description = file: README.rst
url = https://www.example.com/
author = Ammon Turner
author_email = ammon42@gmail.com
license = GNU General Public License v3.0
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: GPL3
    Operating System :: OS Independent
    Programming Langauge :: Python
    Programming Langauge :: Python :: 3
    Programming Langauge :: Python :: 3 :: Only
    Programming Langauge :: Python :: 3.6
    Programming Langauge :: Python :: 3.7
    Programming Langauge :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: